cabal-version:       >=1.10

-- Simple package description to aid with building the executable.
-- At command line 'cabal run' will deal with the compilation and running the code


name:                Haskell-P1
version:             0.1.0.0
author:              Your Name
maintainer:          Your Email Address
build-type:          Simple

executable game.exe
  main-is:             Adventure.hs
  other-modules:       Actions World
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
