cabal-version:       >=1.10

-- Simple package description to aid with building the executable.
-- At command line 'cabal run' will deal with the compilation and running the code

name:                Haskell-P1
version:             0.1.0.0
author:              220018336
maintainer:          rp218@st-andrews.ac.uk
build-type:          Simple

library
  exposed-modules:     Actions, World
  build-depends:       base >= 4.14,
                       haskeline >= 0.8,
                       aeson,
                       bytestring,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-p1
  main-is:             Adventure.hs
  build-depends:       base >= 4.14,
                       haskeline >= 0.8,
                       aeson,
                       bytestring,
                       mtl,
                       Haskell-P1
  default-language:    Haskell2010

test-suite haskell-p1-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       ActionsTest WorldTest
  build-depends:       base,
                       haskeline,
                       QuickCheck,
                       mtl,
                       Haskell-P1
  hs-source-dirs:      test
  default-language:    Haskell2010
